# honeybee-swarm-3d-imaging

./: .gitattributes  .gitignore  README.md  pyproject.toml
configs/calibration/S02/0722/: S02_0722_board_gate.yaml  S02_0722_gate.yaml  S02_0722_localize.yaml
configs/figures/figmorph/: S02_0722_gate.yaml
configs/figures/figtraj/: S02_0722.yaml
configs/figures/frame_sequences/: S202_0725.yaml
configs/figures/ml_identification/: S02_0722.yaml
configs/figures/quiver/: S02_0722_gate.yaml
configs/figures/trajectories/: S02_0722.yaml
configs/morphology/: S02_0722.yaml
configs/trajectories/: S02_0722.yaml
data/: README.md
data/morphology/S02/0722/: GH010174_weights.csv  S02_0722_metrics.parquet
data/trajectories/S02/0722/: GH430142_3d.parquet  GH430142_detection_funnel.csv  GH440142_3d.parquet  GH440142_detection_funnel.csv
src/swarm_assembly_methods/: utils.py
src/swarm_assembly_methods/calibration/: board.py  board_localize.py  board_localize_cli.py  check_rectification.py  cli.py  config.py  detection.py  export_frames.py  extrinsics.py  intrinsics.py  io_utils.py  localize_cli.py  rectification.py  stereo_localize.py  sweep_dk.py  view_rectified.py  yaml_utils.py
src/swarm_assembly_methods/figures/: __init__.py
src/swarm_assembly_methods/figures/figmorph/: cli.py  figures.py  pipeline.py
src/swarm_assembly_methods/figures/figtraj/: boundary.py  cli.py  config.py  quiver.py  quiver_pipeline.py  trajectory.py
src/swarm_assembly_methods/figures/frame_sequences/: cli.py  extract.py  pipeline.py  strip.py
src/swarm_assembly_methods/figures/ml_identification/: cli.py  figures.py  pipeline.py
src/swarm_assembly_methods/morphology/: __init__.py  alignment.py  cli.py  config.py  loading.py  metrics.py  pipeline.py
src/swarm_assembly_methods/trajectories/: cli.py  config.py  pipeline.py
src/swarm_assembly_methods/trajectories/tracking_2d/: config.py  io_utils.py  run_tracking.py  tracker.py  (+1 more)
(+18 files in other folders)
